@@ -696,7 +696,7 @@ alloc_ibuf (void)
   char *real_buf = malloc (input_blocksize + INPUT_BLOCK_SLOP);
   if (!real_buf)
     error (EXIT_FAILURE, 0,
-           _("memory exhausted by input buffer of size %zu bytes (%s)"),
+           _("memory exhausted by input buffer of size %"PRIuMAX" bytes (%s)"),
            input_blocksize, human_size (input_blocksize));
 
   real_buf += SWAB_ALIGN_OFFSET;	/* allow space for swab */
@@ -718,7 +718,8 @@ alloc_obuf (void)
       char *real_obuf = malloc (output_blocksize + OUTPUT_BLOCK_SLOP);
       if (!real_obuf)
         error (EXIT_FAILURE, 0,
-               _("memory exhausted by output buffer of size %zu bytes (%s)"),
+               _("memory exhausted by output buffer of size %"PRIuMAX
+                 " bytes (%s)"),
                output_blocksize, human_size (output_blocksize));
       obuf = ptr_align (real_obuf, page_size);
     }
